--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
 .buttonContainer {
   margin-top: 5%;
   display: flex;
+  flex-direction: column;
 }
 
 .hintBtn {
@@ -57,6 +58,7 @@
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
+  margin-bottom: 2%;
 }
 
 .runButton:hover {
@@ -93,4 +95,50 @@
   box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
   color: #000;
   transform: translateY(-7px);
+}
+
+.solutionParagraph {
+  margin-left: 2%;
+  margin-right: 2%;
+}
+
+.tabContent {
+  display: none;
+  animation: fadeEffect 1s;
+}
+
+@keyframes fadeEffect {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.tab {
+  background-color: #f1f1f1;
+  display: flex;
+}
+
+.tabOption {
+  background-color: #f1f1f1;
+  border: None;
+  height: 4vh;
+}
+
+.tabOption:hover {
+  background-color: #ddd;
+}
+
+.tabOption.active {
+  height: 4vh;
+  background-color: #ccc;
+  border: None;
+}
+
+.outputContainer {
+  width: 30vw;
+  height: 30vh;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 }
