--- a/style.css
+++ b/style.css
@@ -168,3 +168,44 @@
   height: 30vh;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 }
+
+/* Loader circles 
+ * animation taken from https://codepen.io/MaedahBatool/pen/wZxMjZ?editors=1100
+ * */
+
+.loader {
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader > span {
+  background: #000;
+  border-radius: 50%;
+  margin: 5rem 0.5rem;
+  animation: bouncingLoader 0.6s infinite alternate;
+}
+
+.loader > span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.loader > span:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+/* Define the animation called bouncingLoader. */
+@keyframes bouncingLoader {
+  from {
+    width: 0.1rem;
+    height: 0.1rem;
+    opacity: 1;
+    transform: translate3d(0);
+  }
+  to {
+    width: 1rem;
+    height: 1rem;
+    opacity: 0.1;
+    transform: translate3d(0, -1rem, 0);
+  }
+}
