--- a/style.css
+++ b/style.css
@@ -5,13 +5,14 @@
 }
 
 .problemStatementContainer {
-  width: 40%;
+  width: 50%;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   margin-left: 5%;
   margin-right: 5%;
 }
 
 .problemParagraph {
+  margin-right: 4%;
 }
 
 .editorContainer {
@@ -45,8 +46,8 @@
   border: none;
   border-radius: 45px;
   background-color: #62c962;
-  height: 5vh;
-  width: 14vw;
+  height: 4vh;
+  width: 12vw;
   font-family: "Roboto", sans-serif;
   font-size: 1.2rem;
   text-transform: uppercase;
@@ -70,8 +71,8 @@
   border: none;
   border-radius: 45px;
   background-color: #62c962;
-  height: 5vh;
-  width: 14vw;
+  height: 4vh;
+  width: 12vw;
   font-family: "Roboto", sans-serif;
   font-size: 1.2rem;
   text-transform: uppercase;
@@ -180,15 +181,17 @@
 .loader > span {
   background: #000;
   border-radius: 50%;
-  margin: 5rem 0.5rem;
+  margin: 7rem 0.5rem;
   animation: bouncingLoader 0.6s infinite alternate;
 }
 
 .loader > span:nth-child(2) {
+  margin: 7rem 0.5rem;
   animation-delay: 0.2s;
 }
 
 .loader > span:nth-child(3) {
+  margin: 7rem 0.5rem;
   animation-delay: 0.4s;
 }
 
