--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@
 }
 
 .submitButton {
+  display: none;
   border: none;
   border-radius: 45px;
   background-color: #62c962;
@@ -163,9 +164,15 @@
 }
 
 .outputContainer {
-  width: 60vw;
+  width: 50vw;
   height: 30vh;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  display: flex;
+}
+.codeOutput {
+  font-size: 0.8rem;
+  margin-top: 3%;
+  margin-left: 3%;
 }
 
 /* Loader circles 
@@ -176,6 +183,7 @@
   display: none;
   justify-content: center;
   align-items: center;
+  margin-left: 40%;
 }
 
 .loader > span {
